[package]
name = "epcgen"
version = "0.2.0"
edition = "2024"
authors = ["dawe <dawedawe@posteo.de>"]
license = "MIT"
repository = "https://codeberg.org/dawe/epcgen"
description = "A library to help with the type-safe creation of EPC QR codes."

[dev-dependencies]
image = "0.25.8"
qrcode = "0.14.1"


